--- a/proyectos/paolo-inspires.html
+++ b/proyectos/paolo-inspires.html
@@ -1,4 +1,5 @@
 <!--11/09/2022-->
+<!--Este es mi canal de youtube donde hago videos de temas variados y el principal enfoque es educar y dar a conocer cosas que la mayoría de las personas encuentran aburridas de una forma más didáctica.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
