--- a/proyectos/plotter-cnc.html
+++ b/proyectos/plotter-cnc.html
@@ -1,4 +1,5 @@
 <!--15/10/2020-->
+<!--Una máquina CNC de muy bajo costo para dibujar en superficies bidimensionales.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -17,9 +18,9 @@
             <div class="container-subpage">
                 <div class="first-section-subpage">
                     <h1 class="subtitle">¿De que trata?</h1>
-                    <div class="description">
+                    <div class="small-description">
                         <img src="../images/plotter-cnc_profile.jpg">
-                        <p align="justify"></p>
+                        <p>Las máquinas CNC (Computer Numeric Control) son mis dispositivos favoritos en el planeta, pero comprar o incluso fabricar uno tiende a ser muy costoso, por ello durante la pandemia me entró la curiosidad por aprender más sobre su funcionamiento, el primer dispositivo de este estilo que hice fue un <a href="./eggcnc" target="_blank">eggbot</a> pero aún quería hacer algo más real a lo que verdaderamente se conoce como un CNC, por ello creé esta máquina con 3 ejes móviles "x", "y", y "z" con los componentes de una impresora antigua y usé un arduino para darle vida, el programa usado era una librería llamada grbl y por lo tanto no tuve que programar nada, solo me hacía falta convertir los dibujos que quería crear a "código g" un lenguaje que entienden este tipo de máquinas y presionar iniciar para comenzar a dibujar.</p>
                         <img src="../images/plotter-cnc_profile.jpg">
                     </div>
                 </div>
