--- a/proyectos/programacion-competitiva.html
+++ b/proyectos/programacion-competitiva.html
@@ -1,4 +1,5 @@
 <!--15/09/2022-->
+<!--Una serie de concursos de programación donde se busca la solución a problemas de la manera más eficiente usando algoritmos y estructuras de datos óptimas.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -17,9 +18,10 @@
             <div class="container-subpage">
                 <div class="first-section-subpage">
                     <h1 class="subtitle">¿De que trata?</h1>
-                    <div class="description">
+                    <div class="small-description">
                         <img src="../images/programacion-competitiva_profile.jpg">
-                        <p align="justify"></p>
+                        <p>Este proyecto consisitió en una serie de competencias de programación en línea con un equipo de tres personas (mis grandes amigos Maricarmen Barillas y Emiliano Pacheco), la temática de estas competencias era muy particular, consistían en sesiones de 5 horas donde varios equipos se juntaban en sus universidades y buscaban resolver los mismos 11-13 problemas sin ningún tipo de ayuda de los profesores, ni del resto de los equipos, ni mucho menos de internet. La mayoría de los problemas pueden ser resueltos sin mucha experiencia pero no basta con eso, sino que se debe proponer una solución eficiente porque cada problema cuenta con un límite de tiempo.</p><br>
+                        <p>Es importante saber que para producir soluciones eficientes los equipos deben estudiar demasiado y aprender sobre algoritmos y estructuras de datos que reduzcan tanto el tiempo de programación como en el tiempo de ejecución de sus soluciones.</p>
                         <img src="../images/programacion-competitiva_profile.jpg">
                     </div>
                 </div>
