--- a/proyectos/regata.html
+++ b/proyectos/regata.html
@@ -1,4 +1,5 @@
 <!--22/09/2022-->
+<!--Un concurso que se realiza año con año en el Tecnológico de Monterrey Campus Toluca cuyo objetivo es construir un barco tripulable para dos personas usando solamente cartón y botellas-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,7 +20,9 @@
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
                         <img src="../images/regata_profile.jpg">
-                        <p align="justify"></p>
+                        <p>El Tecnológico de Monterrey Campus Toluca organiza cada año un concurso cuyo objetivo es que equipos de 5 personas construyan un barco usando solamente cartón y botellas de plástico, yo participé en la edición 2022 donde en tan solo 1 semana construimos y decoramos un barco de cartón con una temática emo haciéndole alusión a nuestro nombre "emos 2000".</p><br>
+                        <p>El proceso de construcción fue muy sencillo ya que no requirió materiales ni herramienta compleja, usamos varias capas de cartón muy resistente y "duct tape" para fijar la estructura, podría decir que lo más laborioso fue la decoración ya que tuvimos que recortar muchos cuadrados y enmicarlos para evitar que se echaran a perder con el agua y finalmente hicimos algunos detalles extras con una impresora 3D.</p><br>
+                        <p>En la competencia solo pudimos completar la mitad del circuito porque el barco tenía demasiada fuerza de flotación y era muy inestable, por lo que a la mitad del camino nos volteamos, a pesar de no haber ganado nos divertimos y aprendimos mucho sobre la aplicación de la fuerza boyante y el trabajo en equipo.</p>
                         <img src="../images/regata_profile.jpg">
                     </div>
                 </div>
