--- a/proyectos/resolvedor-rubiks.html
+++ b/proyectos/resolvedor-rubiks.html
@@ -1,4 +1,5 @@
 <!--10/06/2020-->
+<!--Un resolvedor de cubos rubik hecho con LEGO Mindstorms como un proyecto que nunca pude terminar cuando era niño.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,7 +20,8 @@
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
                         <img src="../images/resolvedor-rubiks_profile.jpg">
-                        <p align="justify"></p>
+                        <p>Desde los 12 años me regalaron un kit de LEGO Mindstorms que es un kit de LEGO especial ya que aparte de contar con las piezas tradicionales incluye motores eléctricos y un microcontrolador programable, en este kit existen guías paso a paso de como armar 5 robots completamente diferentes y sus códigos de ejemplo, a pesar de ello yo nunca aprendí a programar pero siempre quise realizar este resolvedor de cubos rubik, en su momento lo intenté y no lo logré, por ello aprovechando el tiempo libre por la pandemia decidí intentarlo una vez más ya con un conocimiento superficial de lo que es programar y evidentemente a mis 16 años ya fui capaz de hacerlo funcionar.</p><br>
+                        <p>Su forma de operar era bastante sencilla primero mezclabas el cubo de forma manual y lo colocabas sobre la superficie cuadrada del robot, este procedería a hacer un escaneo de todas las caras recuadro por recuadro hasta tener un mapeo del estado actual del cubo, posteriormente con un algoritmo complejo usando grafos se encontraría la solución con menos movimientos y el robot empezaría a resolverlo, una vez finalizado se giraría la plataforma sobre la que descanza indicando una solución exitosa.</p>
                         <img src="../images/resolvedor-rubiks_profile.jpg">
                     </div>
                 </div>
