--- a/proyectos/rlc.html
+++ b/proyectos/rlc.html
@@ -1,4 +1,5 @@
 <!--30/05/2021-->
+<!--RLC o Room Light Changer es un dispositivo iot que permite controlar la luz de una habitación de manera remota.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,7 +20,18 @@
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
                         <img src="../images/rlc_profile.jpg">
-                        <p align="justify"></p>
+                        <p>RLC o Room Light Changer es un dispositivo iot que permite controlar la luz de una habitación de manera remota o llevando un control del número de personas dentro del cuarto y apagándola automáticamente cuando se encuentre vacío.</p><br>
+                        <p>El dispositivo es una evolución de un proyecto previo <a href="./roc" target="_blank">Room Occupancy Counter</a> el cual tenía como propósito limitar el número máximo de personas en una habitación con la llegada de la pandemia. Usando este mismo concepto mantuve el funcionamiento original pero cambié el cerebro del sistema de usar un arduino nano a usar un esp32 y darle cualidades de conexión wifi lo que me permitió crear una aplicación en mi teléfono para encender o apagar la luz de mi habitación con solo 1 click.</p><br>
+                        <p>Este dispositivo contaba con muchas otras carácterísticas además de las ya mencionadas, entre ellas están:</p>
+                        <ul>
+                            <li>Medidor de humedad.</li>
+                            <li>Medidor de temperatura.</li>
+                            <li>Interfaz de control local con botones.</li>
+                            <li>Pantalla LCD para la visualización de datos de forma local.</li>
+                            <li>Alarma para indicar cuando hay muchas personas.</li>
+                            <li>Conexión wifi.</li>
+                            <li>Conexión bluetooth.</li>
+                        </ul>
                         <img src="../images/rlc_profile.jpg">
                     </div>
                 </div>
