--- a/proyectos/robociety.html
+++ b/proyectos/robociety.html
@@ -20,7 +20,17 @@
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
                         <img src="../images/robociety_profile.jpg">
-                        <p align="justify"></p>
+                        <p>Robociety es un grupo estudiantil del Tecnológico de Monterrey Campus Toluca que participa en gran variedad de competencias de robótica, algunas de estas son:</p>
+                        <ul>
+                            <li>Sumo.</li>
+                            <li>Mini Sumo.</li>
+                            <li>Micro Sumo.</li>
+                            <li>Laberinto.</li>
+                            <li>Guerra de robots.</li>
+                            <li>Seguidores de línea.</li>
+                        </ul>
+                        <p>Mi trabajo en el equipo es como líder de sistemas de control, me encargo de programar a muy bajo nivel las librerías para movimientos perfectos usando encoders, a su vez enseño al resto del equipo la programación con arduino directamente con registros para usar interrupciones y sistemas escondidos del microcontrolador atmega328p para obtener mejores resultados con nuestros robots.</p><br>
+                        <p>En el semestre que formé parte del equipo fuimos a competir a Oaxaca y a Tlaxcala obteniendo muy buenos resultados a pesar de que casi todos los miembros del equipo eramos nuevos.</p>
                         <img src="../images/robociety_profile.jpg">
                     </div>
                 </div>
