--- a/proyectos/robot-extraño.html
+++ b/proyectos/robot-extraño.html
@@ -1,4 +1,5 @@
 <!--23/05/2021-->
+<!--Un robot con el único propósito de demostrar que las ciencias también son arte.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,7 +20,15 @@
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
                         <img src="../images/robot-extraño_profile.jpg">
-                        <p align="justify"></p>
+                        <p>El profesor de mi clase de arte en mi último semestre de preparatoria nos dejó como proyecto final elaborar una obra artística de la forma que quisieramos. Generalmente a la tecnología se le saca del mundo del arte pero para mi todas las etapas de producción y creación de un nuevo dispositivo involucran un proceso creativo igual de importante que el que requiere un pintura o una escultura, por ello decidí orientar mi proyecto a una máquina con materiales reciclados que puediera moverse por el espacio usando patas semicirculares al estilo de uno de los primeros robots de la empresa "Boston Dynamics" llamado <a href="https://www.youtube.com/watch?v=ISznqY3kESI" target="_blank">RHex</a>.</p><br>
+                        <p>Este robot contaba con las siguientes características:</p>
+                        <ul>
+                            <li>Un motor por pata.</li>
+                            <li>Un arduino nano como cerebro.</li>
+                            <li>Un puente H para controlar dos pares de motores.</li>
+                            <li>Un módulo bluetooth para controlarlo de forma remota con la computadora.</li>
+                        </ul>
+                        <p>Este robot no tenía mayor propósito que demostrar como es posible hacer "arte" con tecnología. El proceso de construcción de este robot puede ser encontrado en un <a href="https://www.youtube.com/watch?v=c1SyYC_v7nU" target="_blank">video</a> en mi canal de youtube.</p>
                         <img src="../images/robot-extraño_profile.jpg">
                     </div>
                 </div>
