--- a/proyectos/oci-2015.html
+++ b/proyectos/oci-2015.html
@@ -1,4 +1,5 @@
 <!--10/07/2015-->
+<!--Una de las primeras formas en que me destaqué del resto fue ganando la Olimpiada del Conocimiento Infantil 2015 dónde los mejores 1000 alumnos de todo el país a nivel sexto de primaria son galardonados con una beca hasta finalizar sus estudios universitarios y una experiencia cultural con el resto de ganadores de toda la república.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,7 +20,9 @@
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
                         <img src="../images/oci-2015_profile.jpg">
-                        <p align="justify"></p>
+                        <p>Una de las primeras formas en las que destaqué del resto fue ganando la Olimpiada del Conocimiento Infantil 2015, este es un concurso de inteligencia para todos los alumnos de sexto año de primaria a nivel nacional en México, la eliminatoria consiste de una serie de exámenes para evaluar tus conocimientos donde los 1000 mejores resultados a nivel nacional son ganadores de una beca durante la duración de sus estudios, en adición a esto tambien ganan un viaje de dos semanas a la ciudad de México en la forma de una experiencia cultural donde llegan a conocer y platicar con el presidente de la república.</p><br>
+                        <p>La eliminación puede variar de estado a estado pero en mi caso comenzó con una nominación voluntaria entre los alumnos de mi primaria para realizar un examen cuyo mejor resultado representaría a la escuela ya que solo se puede nominar un alumno por institución, sorprendentemente resulté ganador de esta etapa interna y fui a competir a otra escuela a la etapa zona, después de salir ganador competí en la etapa regional y finalmente en la etapa estatal que era la última.</p><br>
+                        <p>En esta se escogieron 72 ganadores que representarían al estado de México y yo fui uno de ellos, desde entonces he estado becado por mi estado y seguiré recibiendo un apoyo anual de 10000 pesos hasta terminar mis estudios universitarios.</p>
                         <img src="../images/oci-2015_profile.jpg">
                     </div>
                 </div>
