--- a/proyectos/skeleton-tracking.html
+++ b/proyectos/skeleton-tracking.html
@@ -1,4 +1,5 @@
 <!--08/12/2020-->
+<!--Reutilización de las cámaras de profundidad de un kinect para hacer seguimiento de esqueletos y controlar cualquier dispositivo por medio de gestos.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,7 +20,15 @@
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
                         <img src="../images/skeleton-tracking_profile.jpg">
-                        <p align="justify"></p>
+                        <p>Este es un proyecto muy interesante ya que reutiliza un kinect de un xbox 360 para usarlo como cámara de profundidad y poder emplearse como un método de interfaz de usuario en lugar de los métodos tradicionales.</p><br>
+                        <p>Como ejemplos de aplicación de este sensor creé un robot al estilo de un brazo con dos grados de libertad que replicaba el movimiento de uno de mis brazos usando cinemática directa y un segundo prototipo más complejo de un brazo inteligente que alcanzaba cualquier punto en el espacio de manera autónoma usando cinemática inversa.</p><br>
+                        <p>Además de mis proyectos hice una gran aportación a la comunidad ya que parecía que todos los recursos sobre este tema habían desaparecido hace más de 10 años y de alguna forma pude rescatarlos y compartir un <a href="https://youtu.be/9aNdWmKoTUM" target="_blank">video</a> sobre el proceso de instalación y la forma de comenzar a programar esta cámara de profundidad completamente gratis y en español lo que ha sido reconocido por muchos usuarios en el internet.</p><br>
+                        <p>De igual forma los dos proyectos que mencioné anteriormente fueron documentados y el proceso para replicarlos se encuentra en cada uno de los siguientes dos videos:</p>
+                        <ul>
+                            <li><a href="https://youtu.be/Oh6WBOk57_8" target="_blank">Cinemática Directa.</a></li>
+                            <li><a href="https://youtu.be/8TaDrmI6Aas" target="_blank">Cinemática Inversa.</a></li>
+                        </ul>
+                        <p>De igual forma en el siguiente <a href="https://youtu.be/fQrLefnj2xo" target="_blank">video</a> muestro como es posible hacer una comunicación con arduino para usar señales provenientes de la cámara de profundidad para controlar dispositivos externos.</p>
                         <img src="../images/skeleton-tracking_profile.jpg">
                     </div>
                 </div>
