--- a/proyectos/roc.html
+++ b/proyectos/roc.html
@@ -1,4 +1,5 @@
 <!--14/07/2020-->
+<!--ROC o Room Occupancy Counter es un dispositivo electrónico que desarrollé con la llegada de la pandemia para mantener un conteo del número de personas dentro de una habitación y hacer sonar una alarma cuando se excedía un límite.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,7 +20,10 @@
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
                         <img src="../images/roc_profile.jpg">
-                        <p align="justify"></p>
+                        <p>ROC o Room Occupancy Counter es un proyecto que realicé como medida de prevención sanitaria para la pandemia, consiste en dos sensores ultrasónicos colocados uno encima del otro que detectan interrupciones en las distancias para identificar si una persona pasó enfrente de ellos, la razón del por qué son dos es que se necesita saber cual detectó a la persona primero para determinar si es que está ingresando o saliendo de la habitación.</p><br>
+                        <p>En adición se disponía de una interfaz de usuario en el mismo dispositivo para navegar por las opciones como cambiar manualmente el número actual de personas, resetear el dispositivo, cambiar los modos de operación, modificar el límite de personas, desplegar datos en la pantalla LCD y reproducir un sonido cuando se excedía el número máximo de personas.</p><br>
+                        <p>Para que la idea no quedara solo en mi y en el alcance que podía tener con mis conocidos decidí realizar una <a href="https://www.instructables.com/Rom-Occupancy-Counter/" target="_blank">publicación</a> paso a paso de como construir el dispositivo para que se pudiera replicar en cualquier parte del mundo</p><br>
+                        <p>Durante el tiempo que fue relevante recibí varios mensajes de personas que lo realizaron pero solo en una ocasión un grupo de amigos de indonesia me compartió un <a href="https://www.youtube.com/watch?v=5XSxSdnZA7M" target="_blank">video</a> sobre el dispositivo funcionado, mostrando así el gran impacto que tuvo mi aportación a la comunidad.</p>
                         <img src="../images/roc_profile.jpg">
                     </div>
                 </div>
