--- a/proyectos/silla-de-ruedas.html
+++ b/proyectos/silla-de-ruedas.html
@@ -1,4 +1,5 @@
 <!--27/11/2019-->
+<!--Un proyecto para ayudar a las personas con parálisis a desplazarse por su cuenta, consiste en una silla de ruedas electrónica controlada con los movimientos de la cabeza.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -17,9 +18,15 @@
             <div class="container-subpage">
                 <div class="first-section-subpage">
                     <h1 class="subtitle">¿De que trata?</h1>
-                    <div class="description">
+                    <div class="small-description">
                         <img src="../images/silla-de-ruedas_profile.jpg">
-                        <p align="justify"></p>
+                        <p>Este proyecto nace gracias a una tarea para tercer semestre de preparatoria donde con un grupo de amigos debías desarrollar un prototipo de algo que resolviera una problemática de cualquier índole, mi idea con mis compañeros de robótica fue crear una silla de ruedas eléctrica donde cada llanta estuviera accionada por un motor y estos a su vez fueran controlados tanto en velocidad como en dirección por la inclinación de un acelerómetro colocado en forma de una banda en la cabeza del usuario. Los datos del acelerómetro eran interpretados por un arduino uno y de esa forma era muy sencillo desplazarse por el espacio.</p><br>
+                        <p>Este proyecto recibió mucho reconocimiento dentro y fuera de la institución por lo que se pueden encontrar reportajes relacionados en los siguientes links:</p>
+                        <ul>
+                            <li><a href="https://blog.tecmilenio.mx/propositivo/equipos-de-tecmilenio-forman-alianza-ganadora" target="_blank">Equipos de Tecmilenio forman alianza ganadora.</a></li>
+                            <li><a href="https://mexico.quadratin.com.mx/alumnos-de-tecmilenio-crean-mano-robotica-para-personas-con-discapacidad/" target="_blank">Alumnos de Tecmilenio crean mano robótica para personas con discapacidad.</a></li>
+                            <li><a href="https://oscarglenn.com/10909/Estudiantes-de-Tecmilenio-crean-mano-rob%C3%B3tica%3C" target="_blank">Estudiantes de tecmilenio crean mano robótica</a></li>
+                        </ul>
                         <img src="../images/silla-de-ruedas_profile.jpg">
                     </div>
                 </div>
