First Speed Optimizing Test

--- a/proyectos/first-2021-1.html
+++ b/proyectos/first-2021-1.html
@@ -33,7 +33,7 @@
                             <li>Brazo con 2 grados de libertad unido a un elevador para tomar un tubo con base semicircular y sacarlo de la cancha para obtener más puntos.</li>
                             <li>Soporte movil para el celular que controla el robot y sirve como cámara para visualizar el entorno.</li>
                         </ul>
-                        <p>Para este robot realicé un <a href="../resources/FTC Tech Brochure 2021.pdf" target="_blank">folleto técnico</a> que describe de mejor manera y visualmente cada parte del robot.</p>
+                        <p>Para este robot realicé un <a href="../resources/FTC Tech Brochure 2021.pdf" target="_blank">folleto técnico</a> que describe de mejor manera y visualmente cada parte del roboty el diseño puede encontrarse en mi <a href="https://grabcad.com/library/ftc-wint-15645-2020-2021-1" target="_blank">grabcad</a>.</p>
                         <img src="../images/first-2021-1_profile.jpg">
                     </div>
                 </div>
