--- a/proyectos/first-2021-2.html
+++ b/proyectos/first-2021-2.html
@@ -35,7 +35,7 @@
                             <li>Deslizador en la parte superior del elevador para balancearlo en la plataforma de la colgada.</li>
                             <li>Llantas con sensor de color retraibles para obtener más puntos al girar un disco de colores a una posición específica.</li>
                         </ul>
-                        <p>Para este robot realicé un <a href="../resources/FRC Tech Brochure 2021.pdf" target="_blank">folleto técnico</a> que describe de mejor manera y visualmente cada parte del robot.</p>
+                        <p>Para este robot realicé un <a href="../resources/FRC Tech Brochure 2021.pdf" target="_blank">folleto técnico</a> que describe de mejor manera y visualmente cada parte del robot y el diseño puede encontrarse en mi <a href="https://grabcad.com/library/robot-3-0-1" target="_blank">grabcad</a>.</p>
                         <img src="../images/first-2021-2_profile.jpg">
                     </div>
                 </div>
