--- a/proyectos/first-2022.html
+++ b/proyectos/first-2022.html
@@ -29,7 +29,8 @@
                             <li>Limitadores magnéticos de extensión de brazos.</li>
                         </ul>
                         <p>Este robot ganó el premio de inspiración a la ingeniería en la competencia regional del Tecnológico de Monterrey campus Monterrey y nos dio un pase al mundial para representar a México en Houston ante más de 400 equipos.</p><br>
-                        <p>En el mundial tuvimos un gran desempeño tratando de poner a México en alto y quedamos en el lugar 60 de nuestra división.</p>
+                        <p>En el mundial tuvimos un gran desempeño tratando de poner a México en alto y quedamos en el lugar 60 de nuestra división.</p><br>
+                        <p>El diseño puede encontrarse en mi <a href="https://grabcad.com/library/frc-2022-wint-3794-1" target="_blank">grabcad</a>.</p>
                         <img src="../images/first-2022_profile.jpg">
                     </div>
                 </div>
