--- a/proyectos/first-2023.html
+++ b/proyectos/first-2023.html
@@ -39,6 +39,7 @@
                             <li>Límites mecánicos y encoder integrado en el elevador para determinar si es que la garra debe recoger un cono o un cubo.</li>
                             <li>Encoders en el chasis para la estimación de posición.</li>
                         </ul>
+                        <p>El diseño puede encontrarse en mi <a href="https://grabcad.com/library/frc-2023-robot-concept-1" target="_blank">grabcad</a>.</p>
                         <img src="../images/first-2023_profile.jpg">
                     </div>
                 </div>
