--- a/proyectos.html
+++ b/proyectos.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez Kenia FIRST robots robot go kart go-kart silla de ruedas diseño electrónica programación cursos arduino youtube página web">
+        <meta name="author" content="Paolo Reyes">
         <link rel="stylesheet" href="css/style.css">
         <link rel="icon" href="./images/icon.ico">
         <title>Proyectos</title>
