--- a/proyectos/anetA8-plotter.html
+++ b/proyectos/anetA8-plotter.html
@@ -6,6 +6,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez youtube cnc nivelación automática anet a8 plotter dibujo escritura">
+        <meta name="author" content="Paolo Reyes">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../images/icon.ico">
         <title>Anet A8 Plotter</title>
