--- a/proyectos/router-cnc.html
+++ b/proyectos/router-cnc.html
@@ -6,6 +6,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez cnc maquinados madera DIY gcode robótica manufactura servicio robótica">
+        <meta name="author" content="Paolo Reyes">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../images/icon.ico">
         <title>Router CNC</title>
