--- a/proyectos/solidworks.html
+++ b/proyectos/solidworks.html
@@ -1,5 +1,5 @@
 <!--26/03/2023-->
-<!--Certificaciones de SolidWorks.-->
+<!--Todas las certificaciones de diseño 3D para Solidworks que tengo a la fecha.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
