SolidWorks LIVE Link

--- a/proyectos/solidworks.html
+++ b/proyectos/solidworks.html
@@ -20,7 +20,7 @@
             <div class="container">
                 <div class="work-list">
                     <div class="work">
-                        <img src="../images/solidworks_1.jpg">
+                        <a href="https://cv.virtualtester.com/qr/?b=SLDWRKS&i=C-REXLD29F8V"><img src="../images/solidworks_1.jpg"></a>
                     </div>
                 </div>    
             </div>
