--- a/proyectos/solidworks.html
+++ b/proyectos/solidworks.html
@@ -22,6 +22,9 @@
                     <div class="work">
                         <a href="https://cv.virtualtester.com/qr/?b=SLDWRKS&i=C-REXLD29F8V"><img src="../images/solidworks_1.jpg"></a>
                     </div>
+                    <div class="work">
+                        <a href="https://cv.virtualtester.com/qr/?b=SLDWRKS&i=C-ES8RMHN6FA"><img src="../images/solidworks_2.jpg"></a>
+                    </div>
                 </div>    
             </div>
         </div>
