--- a/proyectos/stock-portfolio.html
+++ b/proyectos/stock-portfolio.html
@@ -23,7 +23,8 @@
                     <div class="description">
                         <img src="../images/stock-portfolio_profile.jpg">
                         <p>Mi nuevo proyecto consiste en una página web diseñada para visualizar diariamente el valor neto de mis inversiones. Esta plataforma se ejecuta en un servidor web alojado en una Raspberry Pi 4, brindándome una solución accesible y autónoma para monitorear mis inversiones en cualquier momento. Con esta página web, puedo obtener una visión clara y actualizada de mi cartera de inversiones en tiempo real. Utilizando la potencia de la Raspberry Pi 4, los datos financieros se recopilan, procesan y se presentan en una interfaz intuitiva y fácil de usar.</p><br>
-                        <p>Gracias a la naturaleza autónoma de la Raspberry Pi 4, puedo acceder a la página web desde cualquier dispositivo haciendo uso de un servicio para poner en una ip pública lo que redirige mi Raspberry por medio de ssh, lo que me brinda flexibilidad y comodidad para realizar un seguimiento continuo de mis inversiones, incluso cuando estoy fuera de casa.</p>
+                        <p>Gracias a la naturaleza autónoma de la Raspberry Pi 4, puedo acceder a la página web desde cualquier dispositivo haciendo uso de un servicio para poner en una ip pública lo que redirige mi Raspberry por medio de ssh, lo que me brinda flexibilidad y comodidad para realizar un seguimiento continuo de mis inversiones, incluso cuando estoy fuera de casa.</p><br>
+                        <p>En adición la página cuenta con una sección de predicción dónde puedo establecer el porcentaje de inversiones que me gustaría ver en mi portafolio y automáticamente crea un plan con un portafolio de composición esperada y un apartado de siguientes inversiones que me dice de que manera debo distribuir el monto a invertir para formar el portafolio meta.</p>
                         <img src="../images/stock-portfolio_profile.jpg">
                     </div>
                 </div>
@@ -41,6 +42,15 @@
                     </div>
                     <div class="work">
                         <img src="../images/stock-portfolio_3.jpg">
+                    </div>
+                    <div class="work">
+                        <img src="../images/stock-portfolio_4.jpg">
+                    </div>
+                    <div class="work">
+                        <img src="../images/stock-portfolio_5.jpg">
+                    </div>
+                    <div class="work">
+                        <img src="../images/stock-portfolio_6.jpg">
                     </div>
                 </div>    
             </div>
