--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                         </div>
                         <div class="tab-contents" id="experience">
                             <ul>
-                                <li><span>2022 - Actualidad</span><br>Mentor de Ingeniería para 28 equipos de Robótica de México.</li>
+                                <li><span>2023 - Actualidad</span><br>Embedded Software Quality Test Intern en General Electric.</li>
+                                <li><span>2022</span><br>Mentor de Ingeniería para 28 equipos de Robótica de México.</li>
                                 <li><span>2022 - 2022</span><br>Líder de Sistemas de Control para el equipo Mexicano de Robótica "Robociety".</li>
                                 <li><span>2018 - 2021</span><br>Líder de Ingeniería para el equipo Mexicano de Robótica "WinT 3794".</li>
                             </ul>
