--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
                         <div class="social-icons">
                             <a href="https://www.facebook.com/paolo.reyes.3114935" target="_blank"><i class="fab fa-facebook"></i></a>
                             <a href="https://www.youtube.com/@Paoloreyes" target="_blank"><i class="fab fa-youtube"></i></a>
-                            <a href="https://www.instagram.com/yosoypaoloxd/" target="_blank"><i class="fab fa-instagram"></i></a>
-                            <a href="https://www.linkedin.com/in/paolo-alfonso-reyes-ramirez-663695200/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://www.instagram.com/yosoypaolo254" target="_blank"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.linkedin.com/in/paolo-alfonso-reyes-ramirez-663695200" target="_blank"><i class="fab fa-linkedin"></i></a>
                         </div>
                         <a href="./resources/CV-PaoloReyes.pdf" class="btn btn2">Descargar CV</a>
                     </div>
